Fix - Images are too large on some pages

--- a/css/master-solutions.webflow.css
+++ b/css/master-solutions.webflow.css
@@ -5587,6 +5587,9 @@ img {
 
 .image-20 {
   display: inline-block;
+  width: 100%;
+  max-height: 600px;
+  object-fit:cover;
 }
 
 .div-block-49 {
@@ -5608,6 +5611,20 @@ img {
 .div-block-50 {
   color: #121111;
   background-color: #1b2035;
+  border: 1px solid rgba(137, 137, 137, 0);
+  border-radius: 0 0 60px;
+}
+
+.div-block-50 {
+  color: #121111;
+  background-color: #1b2035;
+  border: 1px solid rgba(137, 137, 137, 0);
+  border-radius: 0 0 60px;
+}
+
+.div-block-50-orange {
+  color: #121111;
+  background-color: #c2831b;
   border: 1px solid rgba(137, 137, 137, 0);
   border-radius: 0 0 60px;
 }
@@ -6139,7 +6156,7 @@ img {
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-columns: 1fr;
     align-content: center;
-    justify-content: end;
+    justify-content: center;
     align-items: stretch;
     justify-items: baseline;
     margin-top: 40px;
